Updated Thoughts templates

--- a/assets/highcharts.scss
+++ b/assets/highcharts.scss
@@ -6,7 +6,7 @@
 }
 
 .highcharts-container {
-  border-radius: $br-lg;
+  border-radius: $br-sm;
 }
 
 .highcharts-credits {
@@ -18,7 +18,7 @@
   border-collapse: collapse;
   width: 100%;
   background: white;
-  border-radius: $br-lg;
+  border-radius: $br-sm;
   padding: $spacing-md;
   overflow: hidden;
 
