--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -39,7 +39,8 @@ $teal: #82A0CE;
 $teal-dark: #507ABA;
 $teal-light: #A7BDDD;
 
-$border: 1px solid rgba($white, 0.1);
+$border: 1px solid rgba($white, 0.2);
+$border-light: 1px solid rgba($black, 0.1);
 $border-hover: 1px solid $white;
 
 
@@ -52,7 +53,7 @@ $font-size-sm: 14px;
 $font-size-md: 16px;
 $font-size-lg: 24px;
 $font-size-xl: 32px;
-$font-size-xxl: 44px;
+$font-size-xxl: 36px;
 $font-size-max: 68px;
 $font-size-mega: 82px;
 
