--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -45,8 +45,9 @@ $border-hover: 1px solid $white;
 
 
 /* Fonts */
-$font-family-main: 'Rokkitt', sans-serif;
+$font-family-main: 'Figtree', sans-serif;
 $font-family-secondary: 'Roboto Sans', sans-serif;
+$font-family-serif: 'Libre Baskerville', sans-serif;
 $font-size-base: 12px;
 $font-size-xs: 12px;
 $font-size-sm: 14px;
