--- a/assets/main.scss
+++ b/assets/main.scss
@@ -421,7 +421,7 @@ p > strong {
         border-top: 1px solid rgba($black, 0.2);
         padding-top: $spacing-md;
         position: sticky;
-        top: 0;
+        top: -1px;
 
         @media screen and (max-width: 1000px) {
           position: relative;
