--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1022,6 +1022,7 @@ img.in-article {
   gap:2rem;
   padding:1rem 0;
   margin: 0 auto;
+  max-width: 1200px;
 }
 
     .product-images.two-across {
