--- a/assets/main.scss
+++ b/assets/main.scss
@@ -178,7 +178,7 @@ h1 {
   line-height: 120%;
 
   @media screen and (max-width: 1200px) {
-    font-size: $font-size-max;
+    font-size: $font-size-xxl;
     line-height: 100%;
   }
 
