--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,7 +1,7 @@
 /* Colors */
-$black: #171123;
-$black-dark: #080819;
-$black-light: #1f1c29;
+$black: #030303;
+$black-dark: #030303;
+$black-light: #030303;
 
 $white: #ffffff;
 $white-dark: #f8f8fc;
@@ -10,6 +10,8 @@ $white-light: #f6f6fb;
 $blue: #6A7CBE;
 $blue-dark: #404AA4;
 $blue-light: #8AA1D2;
+
+$yellow: #F8C802;
 
 $orange: #CAA466;
 $orange-dark: #B5803D;
