--- a/assets/labs.scss
+++ b/assets/labs.scss
@@ -4,7 +4,7 @@
 #simulator {
   background: $black-dark;
   width: 100%;
-  border-radius: $br-lg;
+  border-radius: $br-sm;
   margin: $spacing-lg 0;
   display: flex;
   flex-direction: row;
@@ -23,7 +23,7 @@
 
   video {
     width: 75%;
-    border-radius: $br-lg;
+    border-radius: $br-sm;
 
     @media screen and (max-width: 768px){
       width: 100%;
