GSAP working on hero

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -12,6 +12,7 @@ $blue-dark: #404AA4;
 $blue-light: #8AA1D2;
 
 $yellow: #F8C802;
+$yellow-dark: #d5b00b;
 
 $orange: #CAA466;
 $orange-dark: #B5803D;
