--- a/assets/animation.scss
+++ b/assets/animation.scss
@@ -77,9 +77,11 @@
 @keyframes fade {
   from {
     opacity: 0;
+    transform: translateY(-20px);
   }
   to {
     opacity: 1;
+    transform: translateY(0px);
   }
 }
 
