--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -48,7 +48,7 @@ $border-hover: 1px solid $white;
 
 
 /* Fonts */
-$font-family-main: 'Poppins', sans-serif;
+$font-family-main: 'Space Grotesk', sans-serif;
 $font-family-secondary: 'Roboto Sans', sans-serif;
 $font-family-serif: 'Libre Baskerville', sans-serif;
 $font-size-base: 12px;
