--- a/assets/animation.scss
+++ b/assets/animation.scss
@@ -56,6 +56,34 @@
   }
 }
 
+@keyframes fadeInDownNav {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+    scale: 0.8;
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+    scale: 1;
+  }
+}
+
+@keyframes reveal {
+  0% {
+    clip-path: inset(0 100% 0 0);
+    opacity: 0;
+    scale: .8;
+    transform: skewX(20deg);
+  }
+  100% {
+    clip-path: inset(0 0 0 0);
+    opacity: 1;
+    scale: 1;
+    transform: skewX(0deg);
+  }
+}
+
 @keyframes shadowDrop {
   0% {
     text-shadow: 0 0 0 rgba($white, 0);
