--- a/assets/main.scss
+++ b/assets/main.scss
@@ -83,23 +83,20 @@ button,
     color: $white;
     background: rgba($black,0.9);
     backdrop-filter: blur(4px);
-    border-radius: $br-lg;
+    border-radius: $br-sm;
     border: 1px solid rgba($black, 0.2);
     text-align: center;
     text-decoration: none;
     padding: 12px $spacing-sm 10px;
     cursor: pointer;
-    font-size: 11px;
-    letter-spacing:1px;
-    line-height:100%;
+    font-size: $font-size-md;
     margin:0;
     font-weight: normal;
-    font-family: $font-family-secondary;
+    font-family: $font-family-main;
     display: flex;
     justify-content: center;
-    gap: calc($spacing-xxs - 2px);
+    flex-direction: column;
     align-items: center;
-    text-transform: uppercase;
     overflow: hidden;
     
     &.blue {
@@ -109,9 +106,14 @@ button,
     }
 
     &.white {
-      background: rgba($white,0.2);
+      background: rgba($white, 1);
       box-shadow: none;
-      color: $white;
+      color: $black;
+
+      &:hover {
+        background: $white;
+        color: $black;
+      }
     }
 
     &.primary {
@@ -130,11 +132,10 @@ button,
 
     &.large {
       padding: $spacing-sm $spacing-md;
-      font-size: 16px;
+      font-size: $font-size-md;
 
       @media screen and (max-width: 768px) {
         padding: 12px $spacing-sm 10px;
-        font-size: 11px;
       }
     }
 }
@@ -305,20 +306,19 @@ li {
 
 .code-type {
   margin: $spacing-md 0 0;
-  background: lighten($black-dark, 2.5%);
-  padding: 0.5rem;
-  text-align: right;
+  text-align: left;
   width: 100%;
-  font-size: $font-size-xs;
-  color: lighten($black-dark, 25%);
+  font-size: $font-size-md;
+  font-weight: 600;
+  opacity: 0.6;
 }
 
 .code {
-  padding: 0.5rem;
+  padding: $spacing-md;
   border-radius: .4rem;
   margin: 0 0 $spacing-md;
   overflow-x: auto;
-  background: lighten($black, 15%);
+  border: 1px solid rgba($black, 0.2);
   font-family: monospace;
   font-size: $font-size-sm;
   font-weight: 600;
@@ -340,7 +340,6 @@ li {
     font-family: 'Fira Code', monospace;
     font-size: $font-size-xs;
     line-height: $font-size-sm * $multiplier;
-    color: $white;
   }
 }
 
@@ -520,14 +519,6 @@ p > strong {
   @media screen and (max-width: 1000px) {
     margin: $spacing-lg auto;
     padding: 0 $spacing-md;
-  }
-
-  pre {
-    margin: $spacing-md 0;
-    padding: $spacing-md;
-    border-radius: $br-sm;
-    background: $black-dark;
-    color: $white;
   }
 
   .content {
