Adding learn-threejs

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -7,9 +7,9 @@ $white: #ffffff;
 $white-dark: #f8f8fc;
 $white-light: #f6f6fb;
 
-$blue: #6A7CBE;
-$blue-dark: #404AA4;
-$blue-light: #8AA1D2;
+$blue: #2040b5;
+$blue-dark: #15339e;
+$blue-light: #4869e0;
 
 $yellow: #F8C802;
 $yellow-dark: #d5b00b;
