Working through the nav for learn-threejs

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -7,9 +7,9 @@ $white: #ffffff;
 $white-dark: #f8f8fc;
 $white-light: #f6f6fb;
 
-$blue: #2040b5;
-$blue-dark: #15339e;
-$blue-light: #4869e0;
+$blue: #0037ff;
+$blue-dark: #0037ff;
+$blue-light: #0037ff;
 
 $yellow: #F8C802;
 $yellow-dark: #d5b00b;
