--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -9,7 +9,7 @@ $white-light: #f6f6fb;
 
 $blue: #0037ff;
 $blue-dark: #0037ff;
-$blue-light: #0037ff;
+$blue-light: #5377fb;
 
 $yellow: #F8C802;
 $yellow-dark: #d5b00b;
