--- a/assets/learnthreejs.scss
+++ b/assets/learnthreejs.scss
@@ -1,9 +1,11 @@
 .learnthreejs-layout {
   display: flex;
   flex-direction: row;
+  transition: all 0.4s;
+  transition-timing-function: cubic-bezier(0.355, 0.965, 0.670, 0.970);
 
   &.innerNav-open {
-    margin-left: 300px;
+    margin-left: 400px;
 
      @media screen and (max-width: 1200px){
       margin-left: 0;
