Updated homepage content

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -35,7 +35,7 @@ $mint-dark: #ABC48C;
 $mint-light: #D5E2C6;
 
 $gray: #DBD7E1;
-$gray-dark: #CDC7D5;
+$gray-dark: #6c6a6e;
 $gray-light: #E6E3EA;
 
 $teal: #82A0CE;
